--- a/Notepad/app/src/main/res/layout/edit_layout.xml
+++ b/Notepad/app/src/main/res/layout/edit_layout.xml
@@ -14,7 +14,7 @@
 
         <EditText
             android:id="@+id/title"
-            android:layout_width="match_parent"
+            android:layout_width="324dp"
             android:layout_height="65dp"
             android:layout_marginStart="20dp"
             android:background="@android:color/transparent"
@@ -24,13 +24,13 @@
 
         <EditText
             android:id="@+id/content"
-            android:layout_width="match_parent"
+            android:layout_width="324dp"
             android:layout_height="624dp"
             android:layout_marginStart="20dp"
             android:background="@android:color/transparent"
             android:ems="10"
             android:gravity="top"
             android:hint="@string/content"
-            android:inputType="textPersonName" />
+            android:inputType="textMultiLine" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
