--- a/Notepad/app/src/main/res/layout/activity_main.xml
+++ b/Notepad/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,13 @@
     <ListView
         android:id="@+id/listNotes"
         android:layout_width="360dp"
-        android:layout_height="729dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="1dp"
         android:choiceMode="singleChoice"
-        android:listSelector="@color/colorBlue"/>
+        android:listSelector="@color/colorBlue"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
